--- a/examples/csro/csro.Rmd
+++ b/examples/csro/csro.Rmd
@@ -38,7 +38,7 @@ xarpes.plot_settings('default')
 script_dir = xarpes.set_script_dir()
 
 dfld = 'data_sets'    # Folder containing the data
-flnm = 'csro_152' # Name of the file
+flnm = 'csro_xarpes_demo' # Name of the file
 extn = '.ibw'         # Extension of the file
 
 data_file_path = os.path.join(script_dir, dfld, flnm + extn)
@@ -56,7 +56,7 @@ bmap.shift_angles(shift=-2.28)
 
 fig = plt.figure(figsize=(8, 5)); ax = fig.gca()
 
-fig = bmap.plot(abscissa='momentum', ordinate='kinetic_energy', ax=ax)
+fig = bmap.plot(abscissa='angle', ordinate='kinetic_energy', ax=ax)
 ```
 
 ```{python}
@@ -84,9 +84,9 @@ fig = bmap.plot(abscissa='momentum', ordinate='kinetic_energy', ax=ax)
 fig, ax = plt.subplots(2, 1, figsize=(6, 8))
 
 bmap.correct_fermi_edge(
-      hnuminPhi_guess=32, background_guess=1e2,
-      integrated_weight_guess=1e3, angle_min=-10, angle_max=10,
-      ekin_min=31.96, ekin_max=32.1, true_angle=0,
+      hnuminPhi_guess=52.25, background_guess=1e2,
+      integrated_weight_guess=1e3, angle_min=-20, angle_max=20,
+      ekin_min=52.20, ekin_max=52.3, true_angle=0,
       ax=ax[0], show=False, fig_close=False)
 
 bmap.plot(ordinate='electron_energy', abscissa='momentum',
@@ -110,9 +110,9 @@ print('The optimised hnu - Phi=' + f'{bmap.hnuminPhi:.4f}' + ' +/- '
 fig = plt.figure(figsize=(6, 5))
 ax = fig.gca()
 
-fig = bmap.fit_fermi_edge(hnuminPhi_guess=32, background_guess=1e5,
-                          integrated_weight_guess=1.5e6, angle_min=-10,
-                          angle_max=10, ekin_min=31.96, ekin_max=32.1,
+fig = bmap.fit_fermi_edge(hnuminPhi_guess=52.25, background_guess=1e5,
+                          integrated_weight_guess=1.5e5, angle_min=-20,
+                          angle_max=20, ekin_min=52.20, ekin_max=52.3,
                           ax=ax, show=True, fig_close=True, title='Fermi edge fit')
 
 print('The optimised hnu - Phi=' + f'{bmap.hnuminPhi:.4f}' + ' +/- '
@@ -122,18 +122,18 @@ print('The optimised hnu - Phi=' + f'{bmap.hnuminPhi:.4f}' + ' +/- '
 ```{python}
 # %matplotlib inline
 
-angle_min = 0
-angle_max = 1e6
+angle_min = 5
+angle_max = 15
 
-energy_range = [-0.25, 0.01]
-energy_value = 0
+energy_range = [-0.2, 0.01]
+energy_value = -0.1
 
 mdcs = xarpes.MDCs(*bmap.mdc_set(angle_min, angle_max, energy_range=energy_range))
 
 guess_dists = xarpes.CreateDistributions([
-xarpes.Linear(offset=3.0e3, slope=-100),
-xarpes.SpectralLinear(amplitude=420, peak=7.3, broadening=0.012,
-                      name='Linear_test', index='1')
+xarpes.Linear(offset=8.5e2, slope=9),
+xarpes.SpectralLinear(amplitude=60, peak=10, broadening=0.03,
+                      name='Linear_right', index='1')
 ])
 
 fig = plt.figure(figsize=(8, 6))
@@ -148,7 +148,7 @@ fig = mdcs.visualize_guess(distributions=guess_dists, energy_value=energy_value,
 - For some package versions, a static version of the interactive widget may spuriously show up inside other cells. In that case, uncomment the #get_ipython()... line in the first cell for your notebooks.
 
 ```{python}
-# %matplotlib inline
+# %matplotlib widget
 
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
@@ -166,8 +166,8 @@ plt.rcParams['lines.markersize'] = 0.8
 fig = plt.figure(figsize=(8, 6))
 ax = fig.gca()
 
-self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Linear_test_1',
-                                fermi_velocity=2.85, fermi_wavevector=0.358))
+self_energy = xarpes.SelfEnergy(*mdcs.expose_parameters(select_label='Linear_right_1',
+                                fermi_velocity=-1.8, fermi_wavevector=0.52))
 
 self_energies = xarpes.CreateSelfEnergies([self_energy])
 
@@ -190,22 +190,24 @@ xarpes.parameter_settings(new_sigma=2)
 ```{python}
 # %matplotlib inline
 
-angle_min2 = -1e6
-angle_max2 = 0
+angle_min2 = -8
+angle_max2 = 2
+
+enegy_value = -0.1
 
 plt.rcParams['lines.markersize'] = 3.0
 
 mdc2 = xarpes.MDCs(*bmap.mdc_set(angle_min2, angle_max2, energy_range=energy_range))
 
 guess_dists2 = xarpes.CreateDistributions([
-xarpes.Linear(offset=2.0e3, slope=100),
-xarpes.SpectralLinear(amplitude=450, peak=-7.25, broadening=0.01,
+xarpes.Linear(offset=7e2, slope=-6),
+xarpes.SpectralLinear(amplitude=55, peak=-2.5, broadening=0.04,
                       name='Linear_left', index='1'),
 ])
 
 fig = plt.figure(figsize=(8, 6)); ax = fig.gca()
 
-fig = mdc2.visualize_guess(distributions=guess_dists2, energy_value=0, ax=ax)
+fig = mdc2.visualize_guess(distributions=guess_dists2, energy_value=enegy_value, ax=ax)
 ```
 
 ```{python}
@@ -213,12 +215,14 @@ fig = mdc2.visualize_guess(distributions=guess_dists2, energy_value=0, ax=ax)
 
 fig = mdc2.fit_selection(distributions=guess_dists2, show=False, fig_close=True)
 
-self_left = xarpes.SelfEnergy(*mdc2.expose_parameters(select_label='Linear_left_1',
-fermi_velocity=-2.67, fermi_wavevector=-0.354))
+
 ```
 
 ```{python}
 # %matplotlib inline
+
+self_left = xarpes.SelfEnergy(*mdc2.expose_parameters(select_label='Linear_left_1',
+fermi_velocity=2.6, fermi_wavevector=-0.1))
 
 fig = plt.figure(figsize=(8, 5)); ax = fig.gca()
 
@@ -239,7 +243,7 @@ self_left.plot_both(ax=ax, show=False, fig_close=False)
 self_energy.plot_both(ax=ax, show=False, fig_close=False)
 
 ax.set_xlim([-0.275, 0.025])
-ax.set_ylim([-0.025, 0.275])
+ax.set_ylim([-0.025, 1.5])
 
 plt.legend(); plt.show()
 ```
